# ksae

./: .gitignore  LICENSE  MODEL_README.md  README.md  SEQUENCE_TRAINING.md  TRAINING.md  config.py  current_state.md  data.py  eval.py  evaluate_checkpoints.py  evaluation.py  future_instructions.md  losses.py  main.py  model.py  models.py  plot_training_metrics.py  plotting.py  pyproject.toml  train.py  utils.py
examples/: Duffing_oscillator.ipynb  Lotka_Volterra.ipynb  Parabolic_attractor.ipynb  run_lista.py
notebooks/: Duffing_oscillator.ipynb  Koopman_learning.ipynb  Koopman_learning.py  Lorenz63.ipynb  Parabolic_attractor.ipynb  Pendulum.ipynb  koopman_copy.ipynb  koopman_copy.py  sparse_koopman_pytorch.ipynb
src/ksae/: __init__.py
src/ksae/lista/: __init__.py  encoder.py  shrinkage.py
tests/: test_config.py  test_data.py  test_data_cache.py  test_duffing.py  test_env_interface.py  test_eval_plots.py  test_evaluation.py  test_integration.py  test_lista.py  test_lorenz63.py  test_lotka_volterra.py  test_model.py  test_parabolic.py  test_pendulum.py  test_shrinkage.py  test_train.py  test_trainables.py  test_utils_ode.py
