[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ksae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "pytest>=8.3.3",
]

[tool.setuptools.packages.find]
where = ["src"]
