[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ksae"
version = "0.1.0"
description = "Koopman Sparse Autoencoder research sandbox"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "numpy",
    "scipy",
    "matplotlib",
    "tqdm",
]

[project.optional-dependencies]
develop = ["pytest"]

[tool.setuptools]
py-modules = [
    "main",
    "models",
    "losses",
    "data",
    "train",
    "eval",
    "utils",
]
